webapp/kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
  labels:
    app: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: webapp
        image: IMAGE_NAME
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: mysecretdeployer
