webapp/kubernetes/webapp.pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: webapp
  labels:
    app: webapp
spec:
  containers:
  - name: webapp
    image: csia-pme/webapp
    # As we use the local image, there is no need to pull the image
    imagePullPolicy: Never
    ports:
    - name: http
      containerPort: 80
