webapp/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: service-webapp
spec:
  selector:
    app: webapp
  ports:
  - protocol: TCP
    port: 80
