webapp/kubernetes/webapp.service.yml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 8686
      targetPort: 80
      protocol: TCP
  selector:
    app: webapp
